.k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: website
  name: website
spec:
  ports:
    - name: "http"
      port: 80
      targetPort: 80
      protocol: TCP
    - name: "https"
      port: 443
      targetPort: 443
      protocol: TCP
  selector:
    name: website
