.k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: website
  name: website
spec:
  tls:
    - hosts:
        - richardhere.dev
      secretName: default/richardhere-ssl
  rules:
    - host: richardhere.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: website
                port:
                  number: 80
